2010-06-18  Drew Wilson  <atwilson@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Plumbing for top-level frame names
        https://bugs.webkit.org/show_bug.cgi?id=40430

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::reset):
        Changed obsolete call to clearName() to use setName(WebString()) instead.

2010-06-18  Sam Weinig  <weinig@apple.com>

        Rolling http://trac.webkit.org/changeset/61297 back in.

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:
        * MiniBrowser/mac/WebBundle/WebBundleMain.c: Removed.
        * MiniBrowser/mac/WebBundle/WebBundleMain.m: Added.
        (_didClearWindow):
        (_didCreatePage):
        (WKBundleInitialize):

2010-06-18  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=40803
        TestNetscapePlugin has an incorrect implementation of "property" property

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp: (pluginGetProperty): Don't
        pass a static string back, it's going to be released by NPAPI implementation.

2010-06-18  Leandro Pereira  <leandro@profusion.mobi>

        Unreviewed.

        Adding myself to the committers list.

        * Scripts/webkitpy/common/config/committers.py:

2010-06-17  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] cleanup redundant DEPS value and remove buildbot cleanup code
        https://bugs.webkit.org/show_bug.cgi?id=40615

        * Scripts/update-webkit-chromium: remove directory removal of third_party in old checkouts

2010-06-17  Ada Chan  <adachan@apple.com>

        Rolling out http://trac.webkit.org/changeset/61297 due to build errors.

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:
        * MiniBrowser/mac/WebBundle/WebBundleMain.c: Copied from MiniBrowser/mac/WebBundle/WebBundleMain.c.
        * MiniBrowser/mac/WebBundle/WebBundleMain.m: Removed.
